<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.NewEntryActivity">
    <item
        android:id="@+id/action_add_hive"
        android:icon="@drawable/ic_add_hive"
        android:title="@string/action_add_hive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort_hives"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort_hives"
        app:showAsAction="ifRoom" />
</menu>
